--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "my-components/index.js",
   "scripts": {
     "dev": "vite",
     "lib": "vite build  --out-dir my-components --ssr src/index.js",
