--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "npm install vue-components",
     "dev": "vite",
-    "build": "npm install vue-components && run-p type-check \"build-only {@}\" --",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
@@ -14,10 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
+    "element-plus": "^2.5.1",
     "less": "^4.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.10",
-    "vue-components": "github:kurongdashi/vue-components",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -33,6 +33,8 @@
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.5",
     "vue-tsc": "^1.8.25"
   }
