--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "~5.2.0",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
